style.css
body {
  font-family: "Open Sans", sans-serif !important;
  overflow-x: hidden !important;
  width: 100vw;
  height: auto;
}

.logo {
  width: 6rem;
}

.club-logo {
  width: 42rem;
}

.section-pg1 {
  width: 100%;
  height: 87vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  /* background-color: blueviolet; */
  gap: 1rem;
  margin-bottom: 6rem;
  text-align: center;
}

.secOne-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-right: 2.75rem;
}

.navbar {
  position: sticky !important;
}

@media screen and (max-width: 986px) {
  html,
  body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-x: hidden !important;
  }
  .section-pg1 {
    flex-direction: column;
  }
  .club-logo {
    width: 36rem;
  }
  .heading-sec {
    text-align: center !important;
  }
  .secOne-right {
    text-align: center;
  }
}

.section-pg2 {
  width: 100%;
  height: 100vh;
  /* background-color: blueviolet; */
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  background-image: url(./Images/backgrounds2.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

@media screen and (max-width: 986px) {
  .section-pg2 {
    flex-direction: row;
    background-image: url(./Images/mobile-bg1.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }

  .card {
    width: 12rem !important;
    height: 20rem !important;
  }

  .card-img-top {
    width: 12rem;
  }

  .card-title {
    font-size: 0.75rem;
  }

  .card-text {
    font-size: 0.5rem;
  }
}

.board {
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.sec-3-img {
  width: 24rem;
  border-radius: 12px;
}

@media screen and (max-width: 986px) {
  .board {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .sec-3-img {
    width: 10rem;
    margin: 0 1rem;
  }
}

